# miab-bejeweled

./: .gitignore  CMakeLists.txt  README.md  build.sh  optimize_media.sh
docs/: ai-comfyui-workflow.md  architecture-overview.md  build-size-optimization.md  dev-tooling.md  gemshine-explained.md  match3-algorithm-explained.md  miab-sdk-fetch-highscore-request.md  performance-optimization-plan.md  react-integration.md  refactor-assets-zorder-report.md  repo-structure.md  step1-drawingqueue-report.md  step2-texture-atlas-report.md  step4-bitmap-font-report.md  step5-bitmap-font-atlas-report.md  ui-visual-polish-report.md
docs/images/: gemshine_figures.py
docs/lightning-effect/: lightning-effect.md
docs/lightning-effect/reference-assets/technique2-flexyourbrain/: SOURCE.md
include/: Assets.h  BaseButton.h  BitmapFont.h  BitmapNumber.h  FloatingScore.h  Game.h  GameBoard.h  GameIndicators.h  GameSounds.h  GemShine.h  JewelGroupAnim.h  MiabSDK.h  OptionsManager.h  ParticleSystem.h  ScoreTable.h  StateGame.h  StateHowToPlay.h  StateLightningTest.h  StateMainMenu.h  StateOptions.h  ZOrder.h  go_drawingqueue.h  go_font.h  go_image.h  go_textureatlas.h  go_window.h  inter.h  log.h
media/: atlas.json  fonts.json
platform/unix/: seajeweled.desktop
platform/web/: shell.html
platform/windows/: appicon.rc
src/: Animation.cpp  BaseButton.cpp  BitmapFont.cpp  Board.cpp  Game.cpp  GameBoard.cpp  GameHint.cpp  GameIndicators.cpp  GameSounds.cpp  GemShine.cpp  MiabSDK.cpp  ScoreTable.cpp  State.cpp  StateGame.cpp  StateGameTimetrial.cpp  StateHowtoplay.cpp  StateLightningTest.cpp  StateMainMenu.cpp  StateOptions.cpp  Util.cpp  go_font.cpp  go_image.cpp  go_textureatlas.cpp  go_window.cpp  log.cpp
texture-packer/: atlas.tps  build_atlas.sh  generate_glyphs.py
